examples/should_fail/invalid_instructions.bl
;; running this file should cause blacklight to exit with an error
;; because it contains invalid instructions

1 2 3 4
print say print INVALID_INSTRUCTION refl
5 6 7 8
say print say TOTES_INVALID 9 10
